--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Home Page
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1 class="editable">Your Favorite Source of Free Bootstrap Themes</h1>
-      <hr>
-      <p class="editable">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+      <h1 class="editable">kyle skinner</h1>
+      <hr />
+      <p class="editable">Ruby on Rails and Web Development Blog</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
