--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@ title: Home Page
       <h1 class="editable">kyle skinner</h1>
       <hr />
       <p class="editable">Ruby on Rails and Web Development Blog</p>
-      <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+      <a href="/blog.html" class="btn btn-primary btn-xl">Read My Blog</a>
     </div>
   </div>
 </header>
-
-
-<aside class="bg-dark">
-  <div class="container text-center">
-    <div class="call-to-action">
-      <h2>Free Download at Start Bootstrap!</h2>
-      <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-    </div>
-  </div>
-</aside>
