--- a/about.html
+++ b/about.html
@@ -6,10 +6,13 @@ title: About
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">We've got what you need!</h2>
+        <h2 class="section-heading">I've got what you need!</h2>
         <hr class="light">
-        <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-        <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+        <p class="text-faded">I'm a beginning Ruby and Web Developer and excited to document everything I'm learning.</p>
+        <div class="col-lg-4 col-lg-offset-4">
+          <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+          <p><a href="http://www.github.com/kyleskin">My github</a></p>
+        </div>
       </div>
     </div>
   </div>
