--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ title: Contact
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading">Let's Get In Touch!</h2>
         <hr class="light">
-        <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+        <p>Enjoying my blog?  Ready to start on a new project?  Want to discuss employment opportunities? Give me a call or send me an email and we'll talk about it!</p>
       </div>
       <div class="col-lg-4 col-lg-offset-2 text-center">
         <i class="fa fa-phone fa-3x wow bounceIn"></i>
