wording on about

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading">I've got what you need!</h2>
         <hr class="light">
-        <p class="text-faded">I'm a beginning Ruby and Web Developer and excited to document everything I'm learning.</p>
+        <p class="text-faded">I'm a beginning Ruby and Web Developer and excited to document everything I'm learning.  Check out my github repositories to see my codes so far.</p>
         <div class="col-lg-4 col-lg-offset-4">
           <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
           <p><a href="http://www.github.com/kyleskin">My github</a></p>
