changed front page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home Page
     <div class="header-content-inner">
       <h1 class="editable">kyle skinner</h1>
       <hr />
-      <p class="editable">Ruby on Rails and Web Development Blog</p>
+      <p class="editable">Ruby on Rails Developer</p>
       <a href="/blog.html" class="btn btn-primary btn-xl">Read My Blog</a>
     </div>
   </div>
