--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,17 @@ title: Contact
         <hr class="light">
         <p>Enjoying my blog?  Ready to start on a new project?  Want to discuss employment opportunities? Give me a call or send me an email and we'll talk about it!</p>
       </div>
-      <div class="col-lg-4 col-lg-offset-2 text-center">
+      <div class="col-lg-4 text-center">
         <i class="fa fa-phone fa-3x wow bounceIn"></i>
         <p>720-383-2311</p>
       </div>
       <div class="col-lg-4 text-center">
         <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
         <p><a href="mailto:kyleskin@gmail.com">kyleskin@gmail.com</a></p>
+      </div>
+      <div class="col-lg-4 text-center">
+        <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".2s"></i>
+        <p><a href="http://www.linkedin.com/in/kyleskinner1">LinkedIn</a></p>
       </div>
     </div>
   </div>
