Correcting post style

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Home Page
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1 class="editable">kyle skinner</h1>
+      <h1>kyle skinner</h1>
       <hr />
-      <p class="editable">Ruby on Rails Developer</p>
+      <p>Ruby on Rails Developer</p>
       <a href="/blog.html" class="btn btn-primary btn-xl">Read My Blog</a>
     </div>
   </div>
