removed homework blog

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@ title: Home Page
       <h1>kyle skinner</h1>
       <hr />
       <p>Ruby on Rails Developer</p>
-      <a href="/blog.html" class="btn btn-primary btn-xl">Read My Blog</a>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-lg-offset-2 text-center">
+            <a href="/blog.html" class="btn btn-primary btn-xl">Read My Blog</a>
+          </div>
+          <div class="col-lg-3 text-center">
+            <a href="/homework_tracker.html" class="btn btn-default btn-xl">Homework</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </header>
