--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: About
         <hr class="light">
         <p class="text-faded">I'm a beginning Ruby and Web Developer and excited to document everything I'm learning.  Check out my github repositories to see my codes so far.</p>
         <div class="col-lg-4 col-lg-offset-4">
-          <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"><a href="http://www.github.com/kyleskin"></a></i>
+          <a href="http://www.github.com/kyleskin"><i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
           <!-- <p><a href="http://www.github.com/kyleskin">My github</a></p> -->
         </div>
       </div>
