--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@ title: Contact
         <p>720-383-2311</p>
       </div>
       <div class="col-lg-4 text-center">
-        <a href="mailto:kyleskin@gmail.com">kyleskin@gmail.com><i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a></i>
+        <a href="mailto:kyleskin@gmail.com"><i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a></i>
       </div>
       <div class="col-lg-4 text-center">
-        <a href="http://www.linkedin.com/in/kyleskinner1">LinkedIn><i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".2s"></a></i>
+        <a href="http://www.linkedin.com/in/kyleskinner1"><i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".2s"></a></i>
       </div>
     </div>
   </div>
