changed landing page text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home Page
     <div class="header-content-inner">
       <h1>kyle skinner</h1>
       <hr />
-      <p>Ruby on Rails Developer</p>
+      <p>Full Stack Web Developer</p>
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-lg-offset-3 text-center">
