--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@ title: About
         <h2 class="section-heading">I've got what you need!</h2>
         <hr class="light">
         <p class="text-faded">I am a self-motivated, hard worker looking for a position as a junior developer. I have a year of experience in coding and recently graduated from the DaVinci Coders Ruby on Rails program. I have knowledge of front-end and back-end languages and experience designing using Adobe Illustrator and Photoshop. I am able to build applications “soup to nuts” and would be a valuable asset to any organization.</p>
+        <p class="text-faded">Please checkout my blog or take a look at my Github respositories.</p>
         <div class="col-lg-4 col-lg-offset-4">
           <a href="http://www.github.com/kyleskin", class="icon_link"><i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
         </div>
