--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,9 @@ title: Contact
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading">Let's Get In Touch!</h2>
         <hr class="light">
-        <p>Enjoying my blog?  Ready to start on a new project?  Want to discuss employment opportunities? Give me a call or send me an email and we'll talk about it!</p>
+        <p>Enjoying my blog?  Ready to start on a new project?  Want to discuss employment opportunities? Send me an email and we'll talk about it!</p>
       </div>
-      <div class="col-lg-4 text-center">
-        <i class="fa fa-phone fa-3x wow bounceIn"></i>
-        <p>720-383-2311</p>
-      </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 col-lg-offset-2 text-center">
         <a href="mailto:kyleskin@gmail.com"><i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a></i>
       </div>
       <div class="col-lg-4 text-center">
